initial commit for apim-adapter version 3